@@ -24,7 +24,7 @@ member of a (possibly non-direct) subclass of GBBopen's unit class,
 GBBopen unit class is an instance of the GBBopen metaclass,
 <code>standard-unit-class</code>, which is a subclass of Common Lisp's
 <code>standard-class</code> metaclass.  In other words, GBBopen unit instances fit
-naturally into the CLOS an MOP hierarchies. Fortunately, understanding such
+naturally into the CLOS and MOP hierarchies. Fortunately, understanding such
 details is not required to put GBBopen to use.
 </p>
 <p>The word &#8220;unit&#8221; is used in GBBopen because it has a very neutral meaning
